# rs-matter-stack

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml  publish-dry-run.yml  publish.yml
examples/: light.rs  light_eth.rs
src/: error.rs  eth.rs  lib.rs  mdns.rs  modem.rs  nal.rs  netif.rs  network.rs  nvs.rs  persist.rs  rand.rs  stack.rs  test_device.rs  udp.rs  utils.rs  wifi.rs  wifible.rs  wireless.rs
src/stack/: eth.rs  wifible.rs
src/wifi/: comm.rs  mgmt.rs
src/wireless/: comm.rs  diag.rs  gatt.rs  mgmt.rs  proxy.rs  store.rs  svc.rs  thread.rs  traits.rs  wifi.rs
src/wireless/diag/: thread.rs  wifi.rs
