[package]
name = "rs-matter-stack"
version = "0.1.0"
authors = ["ivmarkov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["matter", "embedded"]
description = "Utility for configuring and running rs-matter"
repository = "https://github.com/ivmarkov/rs-matter-stack"
license = "MIT OR Apache-2.0"
readme = "README.md"
#documentation = "https://docs.esp-rs.org/rs-matter-stack/"
rust-version = "1.77"

#[patch.'https://github.com/ivmarkov/async-io-mini']
#async-io-mini = { path = "../async-io-mini" }

[patch.crates-io]
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }
rs-matter = { git = "https://github.com/ivmarkov/rs-matter", branch = "wifi" }
rs-matter-macros = { git = "https://github.com/ivmarkov/rs-matter", branch = "wifi" }
#rs-matter = { path = "../rs-matter/rs-matter" }
#rs-matter-macros = { path = "../rs-matter/rs-matter-macros" }
edge-nal = { git = "https://github.com/ivmarkov/edge-net" }
#edge-nal = { path = "../edge-net/edge-nal" }
edge-nal-std = { git = "https://github.com/ivmarkov/edge-net" }
#edge-nal-std = { path = "../edge-net/edge-nal" }

[features]
default = ["os"]
zeroconf = ["os"]
os = ["std", "rs-matter/os", "embassy-time/std", "embassy-time/generic-queue"]
async-io-mini = ["std", "edge-nal-std/async-io-mini"]
std = ["rs-matter/std", "edge-nal-std/async-io"]

[dependencies]
log = { version = "0.4", default-features = false }
heapless = "0.8"
scopeguard = { version = "1", default-features = false }
embassy-futures = "0.1"
embassy-sync = "0.5"
embassy-time = "0.3"
embedded-svc = { version = "0.27", default-features = false }
rs-matter = { version = "0.1", default-features = false }
rs-matter-macros = "0.1"
edge-nal = "0.2"
edge-nal-std = { version = "0.2", optional = true }

[dev-dependencies]
static_cell = "2.1"
futures-lite = "1"

[[example]]
name = "light_eth"
path = "examples/light_eth.rs"
required-features = ["os"]
