[package]
name = "rs-matter-stack"
version = "0.1.0"
authors = ["ivmarkov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["matter", "embedded"]
description = "Utility for configuring and running rs-matter"
repository = "https://github.com/ivmarkov/rs-matter-stack"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.77"

[patch.crates-io]
#rs-matter = { git = "https://github.com/project-chip/rs-matter" }
rs-matter = { git = "https://github.com/ivmarkov/rs-matter", branch = "next" }

#rs-matter = { path = "../rs-matter/rs-matter" }
#edge-nal = { path = "../edge-net/edge-nal" }
#edge-nal-std = { path = "../edge-net/edge-nal-std" }
#edge-mdns = { path = "../edge-net/edge-mdns" }

[features]
default = []
zeroconf = ["os", "rs-matter/zeroconf"]
rustcrypto = ["rs-matter/rustcrypto"]
os = ["backtrace", "rs-matter/os", "rustcrypto", "embassy-time/std"]
backtrace = ["std", "rs-matter/backtrace"]
std = ["alloc", "rs-matter/std", "edge-nal-std"]
alloc = ["embedded-svc/alloc"]
examples = ["os", "nix", "embassy-time-queue-utils/generic-queue-64"]

[dependencies]
log = { version = "0.4", default-features = false }
heapless = "0.8"
enumset = { version = "1", default-features = false }
bitflags = { version =  "2.5", default-features = false }
scopeguard = { version = "1", default-features = false }
embassy-futures = "0.1"
embassy-sync = "0.6"
embassy-time = "0.4"
embedded-svc = { version = "0.28", default-features = false }
rs-matter = { version = "0.1", default-features = false }
edge-nal = "0.5"
edge-nal-std = { version = "0.5", optional = true }
edge-mdns = { version = "0.5", optional = true }

[target.'cfg(all(unix, not(target_os = "espidf")))'.dependencies]
bitflags = "2"
nix = { version = "0.27", features = ["net"], optional = true }

[dev-dependencies]
static_cell = "2.1"
futures-lite = "1"
async-compat = "0.2"
env_logger = "0.11"
embassy-time-queue-utils = { version = "0.1", features = ["generic-queue-64"] }

[[example]]
name = "light_eth"
path = "examples/light_eth.rs"
required-features = ["examples"]

[[example]]
name = "light"
path = "examples/light.rs"
required-features = ["examples"]
